--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "loganharber",
+  "homepage": "https://chalharb.github.io/loganharber/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
