--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -76,3 +76,13 @@ jobs:
 
       - name: conventional changelout tag output
         run: echo ${{ steps.changelog.outputs.tag }}
+
+      - name: Create Release
+        uses: actions/create-release@v1
+        if: ${{ steps.changelog.outputs.skipped == 'false' }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+        with:
+          tag_name: ${{ steps.changelog.outputs.tag }}
+          release_name: ${{ steps.changelog.outputs.tag }}
+          body: ${{ steps.changelog.outputs.clean_changelog }}
