fix(devops): Changed prod.yml release notes stage

--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -78,11 +78,10 @@ jobs:
         run: echo ${{ steps.changelog.outputs.tag }}
 
       - name: Create Release
-        uses: actions/create-release@v1
         if: ${{ steps.changelog.outputs.skipped == 'false' }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+        uses: ncipollo/release-action@v1
         with:
-          tag_name: ${{ steps.changelog.outputs.tag }}
-          release_name: ${{ steps.changelog.outputs.tag }}
-          body: ${{ steps.changelog.outputs.clean_changelog }}
+          artifacts: "dist"
+          tag: ${{ steps.changelog.outputs.tag }}
+          makeLatest: true
+          bodyFile: ${{ steps.changelog.outputs.clean_changelog }}
