--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -31,6 +31,16 @@ jobs:
       - name: Run Lint
         run: yarn lint
 
+      - name: Report Coverage
+        if: always()
+        uses: davelosert/vitest-coverage-report-action@v1
+
+      - name: Generating coverage badges
+        uses: jpb06/jest-badges-action@latest
+        with:
+          branches: main
+          no-commit: true
+
   build-and-deploy:
     name: Build and Deploy
     runs-on: ubuntu-latest
