--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -88,7 +88,7 @@ jobs:
           name: code-coverage-report
 
       - name: "Echo download path"
-        run: ls -lah
+        run: ls
 
       - name: Stage coverage report directory
         run: git add ${{steps.download.outputs.download-path}}
