--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,7 @@ on:
 
 permissions:
   contents: write
+  pull-requests: write
 
 jobs:
   test:
@@ -55,5 +56,5 @@ jobs:
       - name: Archive Coverage Badges
         uses: actions/upload-artifact@v3
         with:
-          name: code-coverage-report
+          name: code-coverage-badges
           path: ./badges
