--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,3 +58,28 @@ jobs:
         with:
           name: code-coverage-badges
           path: ./badges
+
+  build:
+    name: Build Project
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: "yarn"
+
+      - name: Install Dependencies
+        run: yarn install --frozen-lockfile
+
+      - name: Compile Typescript and Build
+        run: yarn build
+
+      - name: Archive Build
+        uses: actions/upload-artifact@v3
+        with:
+          name: app-dist
+          path: ./dist
