--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,3 +83,46 @@ jobs:
         with:
           name: app-dist
           path: ./dist
+
+  create-release-notes:
+    name: Create Release Notes
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Download App Dist
+        uses: actions/download-artifact@v3
+        with:
+          name: app-dist
+          path: dist
+
+      - name: Download Code Coverage Report
+        uses: actions/download-artifact@v3
+        with:
+          name: code-coverage-report
+          path: coverage
+
+      - name: Download Coverage Badges
+        uses: actions/download-artifact@v3
+        with:
+          name: code-coverage-badges
+          path: badges
+
+      - name: Generate Semantic Version and Changelog
+        id: changelog
+        uses: TriPSs/conventional-changelog-action@v3
+        with:
+          git-message: "chore(release): {version}"
+          release-count: 0
+          github-token: ${{ secrets.GH_TOKEN }}
+
+      - name: Create Release
+        if: ${{ steps.changelog.outputs.skipped == 'false' }}
+        uses: ncipollo/release-action@v1
+        with:
+          artifacts: "dist, coverage, badges"
+          tag: ${{ steps.changelog.outputs.tag }}
+          makeLatest: true
+          body: ${{ steps.changelog.outputs.clean_changelog }}
