--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,17 +1,21 @@
-name: Production Build and Deploy
+name: App CI
 
 on:
   push:
+    branches:
+      - main
+  pull_request:
     branches:
       - main
   workflow_dispatch:
 
 permissions:
   contents: write
+  pull-requests: write
 
 jobs:
   test:
-    name: Test
+    name: Test Project
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -25,32 +29,38 @@ jobs:
       - name: Install Dependencies
         run: yarn install --frozen-lockfile
 
-      - name: Run tests
+      - name: Run Tests
         run: yarn test
 
-      - name: Run Lint
-        run: yarn lint
-
-      - name: Report Coverage
+      - name: Report Test Coverage
         if: always()
         uses: davelosert/vitest-coverage-report-action@v1
 
-      - name: Generating coverage badges
+      - name: Generate Coverage Badges
         if: always()
         uses: jpb06/jest-badges-action@latest
         with:
           branches: main
           no-commit: true
-          output-folder: ./coverage/badges
+          output-folder: ./badges
 
-      - name: Archive code coverage results directory
+      - name: Lint Project
+        run: yarn lint
+
+      - name: Archive Code Coverage Results
         uses: actions/upload-artifact@v3
         with:
           name: code-coverage-report
           path: ./coverage
 
-  build-and-deploy:
-    name: Build and Deploy
+      - name: Archive Coverage Badges
+        uses: actions/upload-artifact@v3
+        with:
+          name: code-coverage-badges
+          path: ./badges
+
+  build:
+    name: Build Project
     runs-on: ubuntu-latest
     needs: test
     steps:
@@ -68,36 +78,46 @@ jobs:
       - name: Compile Typescript and Build
         run: yarn build
 
-      - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@v4
+      - name: Archive Build
+        uses: actions/upload-artifact@v3
         with:
-          folder: dist
+          name: app-dist
+          path: ./dist
 
   create-release-notes:
     name: Create Release Notes
     runs-on: ubuntu-latest
-    needs: build-and-deploy
+    needs: build
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Download a single artifact
-        id: download
+      - name: Download App Dist
+        uses: actions/download-artifact@v3
+        with:
+          name: app-dist
+          path: dist
+
+      - name: Download Code Coverage Report
         uses: actions/download-artifact@v3
         with:
           name: code-coverage-report
+          path: coverage
 
-      - name: "Echo download path"
-        run: echo ${{steps.download.outputs.download-path}}
+      - name: Download Coverage Badges
+        uses: actions/download-artifact@v3
+        with:
+          name: code-coverage-badges
+          path: badges
 
-      - name: Stage coverage report directory
-        run: git add ${{steps.download.outputs.download-path}}
-
-      - name: Conventional Changelog Action
+      - name: Generate Semantic Version and Changelog
         id: changelog
         uses: TriPSs/conventional-changelog-action@v3
         with:
           git-message: "chore(release): {version}"
+          git-branch: feat/devops-refactor
           release-count: 0
           github-token: ${{ secrets.GH_TOKEN }}
 
@@ -105,7 +125,25 @@ jobs:
         if: ${{ steps.changelog.outputs.skipped == 'false' }}
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "dist"
+          artifacts: "dist, coverage, badges"
           tag: ${{ steps.changelog.outputs.tag }}
           makeLatest: true
           body: ${{ steps.changelog.outputs.clean_changelog }}
+
+  deploy:
+    name: Deploy to GitHub Pages
+    runs-on: ubuntu-latest
+    needs: create-release-notes
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+
+    steps:
+      - name: Download App Dist
+        uses: actions/download-artifact@v3
+        with:
+          name: app-dist
+          path: dist
+
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: dist
