--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,6 +106,11 @@ jobs:
           name: code-coverage-report
           path: coverage
 
+      - name: Zip Coverage Report
+        uses: montudor/action-zip@v1
+        with:
+          args: zip -qq -r coverage.zip coverage
+
       - name: Download Coverage Badges
         uses: actions/download-artifact@v3
         with:
@@ -124,7 +129,7 @@ jobs:
         if: ${{ steps.changelog.outputs.skipped == 'false' }}
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "dist, coverage"
+          artifacts: "coverage.zip"
           tag: ${{ steps.changelog.outputs.tag }}
           makeLatest: true
           body: ${{ steps.changelog.outputs.clean_changelog }}
