ci(devops): Updated Deployment stage to depend on build stage

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -147,7 +147,7 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    # needs: create-release-notes
+    needs: build
     # if: github.event_name == 'push' && github.ref == 'refs/heads/main'
 
     steps:
