--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,4 @@
-# Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
+name: App CI
 
 on:
   push:
@@ -9,46 +8,165 @@ on:
     branches:
       - main
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# Sets the GITHUB_TOKEN permissions to allow deployment to GitHub Pages
 permissions:
-  contents: read
+  contents: write
+  pull-requests: write
   pages: write
   id-token: write
 
-# Allow one concurrent deployment
 concurrency:
   group: "pages"
   cancel-in-progress: true
 
 jobs:
-  # Single deploy job since we're just deploying
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+  test:
+    name: Test Project
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Set up Node
-        uses: actions/setup-node@v3
+
+      - uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: "npm"
-      - name: Install dependencies
-        run: npm install
-      - name: Build
-        run: npm run build
+          cache: "yarn"
+
+      - name: Install Dependencies
+        run: yarn install --frozen-lockfile
+
+      - name: Run Tests
+        run: yarn test
+
+      - name: Report Test Coverage
+        if: always()
+        uses: davelosert/vitest-coverage-report-action@v1
+
+      - name: Generate Coverage Badges
+        if: always()
+        uses: jpb06/jest-badges-action@latest
+        with:
+          branches: main
+          no-commit: true
+          output-folder: ./badges
+
+      - name: Lint Project
+        run: yarn lint
+
+      - name: Archive Code Coverage Results
+        uses: actions/upload-artifact@v3
+        with:
+          name: code-coverage-report
+          path: ./coverage
+
+      - name: Archive Coverage Badges
+        uses: actions/upload-artifact@v3
+        with:
+          name: code-coverage-badges
+          path: ./badges
+
+  build:
+    name: Build Project
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: "yarn"
+
+      - name: Install Dependencies
+        run: yarn install --frozen-lockfile
+
+      - name: Compile Typescript and Build
+        run: yarn build
+
+      - name: Archive Build
+        uses: actions/upload-artifact@v3
+        with:
+          name: app-dist
+          path: ./dist
+
+  create-release-notes:
+    name: Create Release Notes
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Download App Dist
+        uses: actions/download-artifact@v3
+        with:
+          name: app-dist
+          path: dist
+
+      - name: Download Code Coverage Report
+        uses: actions/download-artifact@v3
+        with:
+          name: code-coverage-report
+          path: coverage
+
+      - name: Zip Coverage Report
+        uses: montudor/action-zip@v1
+        with:
+          args: zip -qq -r coverage.zip coverage
+
+      - name: Download Coverage Badges
+        uses: actions/download-artifact@v3
+        with:
+          name: code-coverage-badges
+          path: badges
+
+      - name: Generate Semantic Version and Changelog
+        id: changelog
+        uses: TriPSs/conventional-changelog-action@v3
+        with:
+          git-message: "chore(release): {version}"
+          release-count: 0
+          github-token: ${{ secrets.GH_TOKEN }}
+
+      - name: Create Release
+        if: ${{ steps.changelog.outputs.skipped == 'false' }}
+        uses: ncipollo/release-action@v1
+        with:
+          artifacts: "coverage.zip"
+          tag: ${{ steps.changelog.outputs.tag }}
+          makeLatest: true
+          body: ${{ steps.changelog.outputs.clean_changelog }}
+
+  deploy:
+    name: Deploy to GitHub Pages
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Download App Dist
+        uses: actions/download-artifact@v3
+        with:
+          name: app-dist
+          path: dist
+
       - name: Setup Pages
         uses: actions/configure-pages@v3
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          # Upload dist repository
           path: "./dist"
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
