--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,11 +7,18 @@ on:
   pull_request:
     branches:
       - main
+
   workflow_dispatch:
 
 permissions:
   contents: write
   pull-requests: write
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
 
 jobs:
   test:
@@ -23,7 +30,7 @@ jobs:
 
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 18
           cache: "yarn"
 
       - name: Install Dependencies
@@ -69,7 +76,7 @@ jobs:
 
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 18
           cache: "yarn"
 
       - name: Install Dependencies
@@ -84,10 +91,41 @@ jobs:
           name: app-dist
           path: ./dist
 
+  deploy:
+    name: Deploy to GitHub Pages
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Download App Dist
+        uses: actions/download-artifact@v3
+        with:
+          name: app-dist
+          path: dist
+
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: "./dist"
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
+
   create-release-notes:
     name: Create Release Notes
     runs-on: ubuntu-latest
-    needs: build
+    needs: deploy
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
 
     steps:
@@ -133,24 +171,3 @@ jobs:
           tag: ${{ steps.changelog.outputs.tag }}
           makeLatest: true
           body: ${{ steps.changelog.outputs.clean_changelog }}
-
-  deploy:
-    name: Deploy to GitHub Pages
-    runs-on: ubuntu-latest
-    needs: create-release-notes
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Download App Dist
-        uses: actions/download-artifact@v3
-        with:
-          name: app-dist
-          path: dist
-
-      - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          folder: dist
